--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "progressive-size",
   "version": "1.0.0",
   "license": "MIT",
-  
-  
-
-  "main": "./dist/index.js",
+  "author": "marlonpassos",
+  "description": "facilita a porra toda com css 😀",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MarlonPassos-git/progressive-size.git"
+  },
+  "main": "dist",
   "devDependencies": {
       "rimraf": "^3.0.2",
       "typescript": "^4.5.2"
+  },
+  "homepage": "https://github.com/MarlonPassos-git/progressive-size#readme",
+  "bugs": {
+    "url": "https://github.com/MarlonPassos-git/progressive-size/issues"
   },
   "scripts": {
       "prebuild": "rimraf dist",
       "build": "tsc",
       "watch": "tsc -w"
   }
-
-
 }
