--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "main": "dist",
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "jest": "^27.4.3",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.0",
     "typescript": "^4.5.2"
   },
   "homepage": "https://github.com/MarlonPassos-git/progressive-size#readme",
@@ -20,7 +23,8 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "test": "jest"
   },
   "dependencies": {
     "ts-node-dev": "^1.1.8"
